src/render/snapshots/agentctl__render__table__tests__credits_cells.snap
---
source: src/render/table_tests.rs
expression: rendered
---
 Account    | Org  | Plan | 5h  | Weekly | Fable (weekly) | Credits               | 5h reset         | Weekly reset        | State 
------------+------+------+-----+--------+----------------+-----------------------+------------------+---------------------+-------
 n/a        | Acme | max  | 21% | 35%    | 56%            | n/a                   | 11:13 AM (2h13m) | Fri 5:00 AM (2d20h) | ok    
 off        | Acme | max  | 21% | 35%    | 56%            | off                   | 11:13 AM (2h13m) | Fri 5:00 AM (2d20h) | ok    
 capped     | Acme | max  | 21% | 35%    | 56%            | $12.34 / $50.00 (25%) | 11:13 AM (2h13m) | Fri 5:00 AM (2d20h) | ok    
 uncapped   | Acme | max  | 21% | 35%    | 56%            | $12.34 / Unlimited    | 11:13 AM (2h13m) | Fri 5:00 AM (2d20h) | ok    
 unmeasured | Acme | max  | 21% | 35%    | 56%            | —                     | 11:13 AM (2h13m) | Fri 5:00 AM (2d20h) | ok
