src/render/snapshots/agentctl__render__table__tests__no_numbers.snap
---
source: src/render/table_tests.rs
expression: rendered
---
 Account           | Org  | Plan | 5h | Weekly | Fable (weekly) | Credits | Next reset | State           
-------------------+------+------+----+--------+----------------+---------+------------+-----------------
 alice@example.com | Acme | —    | —  | —      | —              | —       | —          | keychain locked
