src/render/snapshots/agentctl__render__table__tests__two_accounts.snap
---
source: src/render/table_tests.rs
expression: render(&report)
---
 Account           | Org  | Plan | 5h  | Weekly | Fable (weekly) | Credits | Next reset | State 
-------------------+------+------+-----+--------+----------------+---------+------------+-------
 alice@example.com | Acme | max  | 21% | 35%    | 56%            | n/a     | 2h13m      | ok    
 bob@example.com   | Acme | max  | 21% | 35%    | 56%            | n/a     | 2h13m      | ok
